Wrap up landing page, fix some issues in BTSTRP positioning

--- a/stylesheets/btstrp.css
+++ b/stylesheets/btstrp.css
@@ -2111,7 +2111,7 @@
   white-space: nowrap;
 }
 .btstrp .dropdown-backdrop {
-  position: fixed;
+  position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
@@ -2530,6 +2530,7 @@
   z-index: 1030;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
+  margin-bottom: 0;
 }
 .btstrp .navbar-fixed-top {
   top: 0;
@@ -3684,7 +3685,7 @@ a.list-group-item.active > .btstrp .badge, .nav-pills > .active > a > .btstrp .b
 .btstrp .modal {
   display: none;
   overflow: hidden;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
@@ -3711,8 +3712,9 @@ a.list-group-item.active > .btstrp .badge, .nav-pills > .active > a > .btstrp .b
 }
 .btstrp .modal-dialog {
   position: relative;
-  width: auto;
-  margin: 10px;
+  width: 50%;
+  margin: 10px auto;
+  z-index: 1041;
 }
 .btstrp .modal-content {
   position: relative;
@@ -3726,7 +3728,7 @@ a.list-group-item.active > .btstrp .badge, .nav-pills > .active > a > .btstrp .b
   outline: 0;
 }
 .btstrp .modal-backdrop {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
@@ -4042,7 +4044,7 @@ a.list-group-item.active > .btstrp .badge, .nav-pills > .active > a > .btstrp .b
   visibility: hidden !important;
 }
 .btstrp .affix {
-  position: fixed;
+  position: absolute;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
@@ -4052,8 +4054,8 @@ a.list-group-item.active > .btstrp .badge, .nav-pills > .active > a > .btstrp .b
   border: 1px solid #777777;
   color: #333;
   font-size: 6px;
-  line-height: 1.5;
-  margin: 1em auto;
+  line-height: 1;
+  margin: 0 auto;
   overflow: hidden;
   position: relative;
   width: 60em;
