--- a/stylesheets/btstrp/_btstrp-container.scss
+++ b/stylesheets/btstrp/_btstrp-container.scss
@@ -4,8 +4,8 @@
   border: 1px solid $gray-light;
   color: #333;
   font-size: $BTSTRP-base;
-  line-height: 1.5;
-  margin: 1em auto;
+  line-height: 1;
+  margin: 0 auto;
   overflow: hidden;
   position: relative;
   width: $BTSTRP-container;
