--- a/stylesheets/btstrp/_dropdowns.scss
+++ b/stylesheets/btstrp/_dropdowns.scss
@@ -160,7 +160,7 @@
 
 // Backdrop to catch body clicks on mobile, etc.
 .dropdown-backdrop {
-  position: fixed;
+  position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
