--- a/stylesheets/btstrp/_modals.scss
+++ b/stylesheets/btstrp/_modals.scss
@@ -16,7 +16,7 @@
 .modal {
   display: none;
   overflow: hidden;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
@@ -43,8 +43,9 @@
 // Shell div to position the modal with bottom padding
 .modal-dialog {
   position: relative;
-  width: auto;
-  margin: 10px;
+  width: 50%;
+  margin: 10px auto;
+  z-index: $zindex-modal-background + 1;
 }
 
 // Actual modal
@@ -62,7 +63,7 @@
 
 // Modal background
 .modal-backdrop {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
