--- a/stylesheets/btstrp/_utilities.scss
+++ b/stylesheets/btstrp/_utilities.scss
@@ -52,6 +52,6 @@
 // -------------------------
 
 .affix {
-  position: fixed;
+  position: absolute;
   @include translate3d(0, 0, 0);
 }
